<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewPlaceitActivity" >

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="back"
        android:text="@string/back" />

    <TextView
        android:id="@+id/textViewNewPlaceIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonBack"
        android:layout_alignBottom="@+id/buttonBack"
        android:layout_centerHorizontal="true"
        android:textSize="23sp"
        android:text="@string/newplaceit" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewDes"
        android:layout_below="@+id/buttonBack"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editDes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTime"
        android:layout_alignLeft="@+id/editName"
        android:layout_below="@+id/editName"
        android:hint="@string/enterDes" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/checkBoxSch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toLeftOf="@+id/textView4"
        android:checked="false" />

    <EditText
        android:id="@+id/editTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/checkBoxSch"
        android:layout_toRightOf="@+id/textView4"
        android:hint="@string/weeks"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/textViewName"
        android:layout_marginBottom="18dp"
        android:text="@string/schedule"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewName"
        android:layout_alignBottom="@+id/textViewName"
        android:layout_alignRight="@+id/editTime"
        android:layout_toRightOf="@+id/textViewName"
        android:ems="10"
        android:hint="@string/enterNam" />

    <TextView
        android:id="@+id/textViewDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonBack"
        android:layout_centerVertical="true"
        android:text="@string/description"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editDes"
        android:layout_alignParentBottom="true"
        android:onClick="createPlaceIt"
        android:text="@string/create" />

</RelativeLayout>