<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:text="@string/placeit"
        android:textSize="23sp" />

    <Button
        android:id="@+id/buttonMap"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView1"
        android:layout_marginTop="50dp"
        android:text="@string/map" 
        android:onClick="goToMap" />

    <Button
        android:id="@+id/buttonList"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonMap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/list"
        android:onClick="goToList" />
    
    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/help" />


</RelativeLayout>
