<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DescriptionActivity" >

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="back"
        android:text="@string/back" />

    <Button
        android:id="@+id/buttonDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:onClick="deletePlaceIt"
        android:text="@string/delete" />

    <Button
        android:id="@+id/buttonRep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:onClick="repostPlaceIt"
        android:text="@string/repost" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/buttonBack"
        android:layout_alignBottom="@id/buttonBack"
        android:layout_centerHorizontal="true"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textViewDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/buttonBack"
        android:layout_marginTop="18dp"
        android:text="@string/description"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textShowDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonDel"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/textViewDes"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/textViewDes"
        android:text="@string/stuff"
        android:textSize="20sp" />

</RelativeLayout>